--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -27,6 +27,7 @@ executable haskell
     -- Modules included in this executable, other than Main.
     other-modules:
         Day1
+        Day2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
