--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -28,6 +28,7 @@ executable haskell
     other-modules:
         Day1
         Day2
+        Day3
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -35,6 +36,7 @@ executable haskell
         base ^>=4.14.3.0,
         filepath,
         directory,
-        split
+        split,
+        containers
     hs-source-dirs:   app
     default-language: Haskell2010
