--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -29,6 +29,7 @@ executable haskell
         Day1
         Day2
         Day3
+        Day4
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
