--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -30,6 +30,7 @@ executable haskell
         Day2
         Day3
         Day4
+        Day5
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -38,6 +39,7 @@ executable haskell
         filepath,
         directory,
         split,
-        containers
+        containers,
+        regex-posix
     hs-source-dirs:   app
     default-language: Haskell2010
