--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -31,6 +31,7 @@ executable haskell
         Day3
         Day4
         Day5
+        Day6
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
