--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -32,6 +32,7 @@ executable haskell
         Day4
         Day5
         Day6
+        Day7
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
