--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -33,6 +33,7 @@ executable haskell
         Day5
         Day6
         Day7
+        Day8
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
