--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -34,6 +34,23 @@ executable haskell
         Day6
         Day7
         Day8
+        Day9
+        Day10
+        Day11
+        Day12
+        Day13
+        Day14
+        Day15
+        Day16
+        Day17
+        Day18
+        Day19
+        Day20
+        Day21
+        Day22
+        Day23
+        Day24
+        Day25
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
