--- a/2022/haskell/haskell.cabal
+++ b/2022/haskell/haskell.cabal
@@ -60,6 +60,11 @@ executable haskell
         directory,
         split,
         containers,
-        regex-posix
+        regex-posix,
+        aeson,
+        vector,
+        bytestring,
+        utf8-string,
+        ansi-terminal
     hs-source-dirs:   app
     default-language: Haskell2010
